--- a/frontend/src/app/components/view-reviews/view-reviews.component.html
+++ b/frontend/src/app/components/view-reviews/view-reviews.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5 pt-0 border rounded p-3 shadow-sm" style="max-width: 600px; max-height: 600px; overflow-y: auto;">
+<div class="container mt-5 pt-0 border rounded p-3 shadow-sm" style="max-width: 600px; max-height: 575px; overflow-y: auto;">
   <!-- Fixed Header -->
    <div style="position: sticky; top: 0; z-index: 10;  background-color: white;  padding-top: 15px; ">
     <h4 class="mb-3" >
@@ -7,7 +7,7 @@
       <hr class="my-1" />    
    </div>
   <!-- Reviews List -->
-  <div *ngFor="let review of reviews" class="card mb-1 border-0">
+  <div *ngFor="let review of reviews;let last = last" class="card mb-1 border-0">
     <div class="card-body p-2">
       <!-- Reviewer Info -->
       <div class="d-flex align-items-center">
@@ -45,6 +45,6 @@
         {{ review.comment || 'No comment provided.' }}
       </p>
     </div>
-    <hr class="my-0" style="border: 0; border-top: 1px solid #756f6f;" />
+    <hr *ngIf="!last" class="my-0" style="border: 0; border-top: 1px solid #756f6f;" />
   </div>
 </div>
