--- a/frontend/src/app/components/ride-history/ride-history.component.html
+++ b/frontend/src/app/components/ride-history/ride-history.component.html
@@ -26,15 +26,25 @@
             <h2 ngbAccordionHeader>
                 <button ngbAccordionButton class="row w-100">
                     <!-- Texte aligné à gauche -->
-                    <span class="text-start col-5">
-                      Ride from <b>{{ ride.ride.depart }}</b> to <b>{{ ride.ride.destination }}</b> 
-                      on <b>{{ ride.ride.dateRide | date: 'short' }}</b>
-                    </span>
-                    <div class="col-2">
+                    <div class="col-5">
+                      <span class="text-start">
+                        from <b>{{ ride.ride.depart }}</b>
+                      </span>
+                      <br>
+                      <span class="text-start">
+                        to <b>{{ ride.ride.destination }}</b>
+                      </span>
+                      <br>
+                      <span class="text-start">
+                        on <b>{{ ride.ride.dateRide | date: 'short' }}</b>
+                      </span>
+                    </div>
+                    <div class="col-3">
                       <ngb-rating 
                                 [(rate)]="ride.review"
                                 [max]="5" 
-                                [readonly]="true">
+                                [readonly]="true"
+                                >
                                 <ng-template let-fill="fill" let-index="index">
                                     <i
                                     class="bi-star-fill"
@@ -42,29 +52,31 @@
                                         background: 'linear-gradient(to right, #ffc107 ' + fill + '%, #e4e5e9 ' + fill + '%)',
                                         '-webkit-background-clip': 'text',
                                         '-webkit-text-fill-color': 'transparent',
-                                        'font-size': '1.5em'
+                                        'font-size': '1.3em'
                                     }"
                                     ></i> 
                                 </ng-template>    
                             </ngb-rating>
                     </div>
                     <!-- Icône alignée à droite -->
-                    <div class="col-auto">
+                    
+                    <div class="col-1 m-2">
                       <button class="btn btn-light ms-2" (click)="openEditModal(ride.ride); $event.stopPropagation();">
                         <i 
-                        class="bi bi-pencil text-end ms-5" 
+                        class="bi bi-pencil text-end " 
                         title="Edit Ride">
                       </i>
                       </button>
-                      </div>
-                      <div>
+                    </div>
+                    <div class="col-1 m-2">
                       <button class="btn btn-light ms-2 hover-color-red" (click)="openDeleteModal(ride.ride); $event.stopPropagation();">
-                    <i 
-                      class="bi bi-trash custom-delete-icon text-end ms-5" 
-                      title="Delete Ride">
-                    </i>
-                </button>
-              </div>
+                        <i 
+                          class="bi bi-trash custom-delete-icon text-end " 
+                          title="Delete Ride">
+                        </i>
+                      </button>
+                    </div>
+                    
                   </button>                  
               </h2>              
         <div ngbAccordionCollapse>
@@ -98,7 +110,7 @@
                                             background: 'linear-gradient(to right, #ffc107 ' + fill + '%, #e4e5e9 ' + fill + '%)',
                                             '-webkit-background-clip': 'text',
                                             '-webkit-text-fill-color': 'transparent',
-                                            'font-size': '1.5em'
+                                            'font-size': '1.3em'
                                         }"
                                         ></i> 
                                     </ng-template>    
