--- a/frontend/src/app/components/ride-history/ride-history.component.html
+++ b/frontend/src/app/components/ride-history/ride-history.component.html
@@ -60,23 +60,30 @@
                     </div>
                     <!-- Icône alignée à droite -->
                     
-                    <div class="col-1 m-2">
-                      <button class="btn btn-light ms-2" (click)="openEditModal(ride.ride); $event.stopPropagation();">
+                    <div class="col-1 ms-1">
+                      <button class="btn btn-light" (click)="openEditModal(ride.ride); $event.stopPropagation();">
                         <i 
                         class="bi bi-pencil text-end " 
                         title="Edit Ride">
                       </i>
                       </button>
                     </div>
-                    <div class="col-1 m-2">
-                      <button class="btn btn-light ms-2 hover-color-red" (click)="openDeleteModal(ride.ride); $event.stopPropagation();">
+                    <div class="col-1 ms-1">
+                      <button class="btn btn-light hover-color-red" (click)="openDeleteModal(ride.ride); $event.stopPropagation();">
                         <i 
                           class="bi bi-trash custom-delete-icon text-end " 
                           title="Delete Ride">
                         </i>
                       </button>
                     </div>
-                    
+                    <div class="col-1 ms-1">
+                      <button class="btn btn-light " (click)="openCommentModal(ride.ride); $event.stopPropagation();">
+                        <i 
+                          class="bi bi bi-chat text-end " 
+                          title="Comment and Review">
+                        </i>
+                      </button>
+                    </div>
                   </button>                  
               </h2>              
         <div ngbAccordionCollapse>
@@ -161,7 +168,7 @@
     </div>
   </div>
 
-  <!-- model delete-->
+  <!-- model Edit-->
   <div
     class="modal fade"
     tabindex="-1"
@@ -185,6 +192,34 @@
         </div>
         <div class="modal-body">
           <app-update-ride [ride]="selectedRide"></app-update-ride>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- model comment-->
+  <div
+    class="modal fade"
+    tabindex="-1"
+    role="dialog"
+    [class.show]="isCommentModalOpen"
+    [ngStyle]="{ display: isCommentModalOpen ? 'block' : 'none' }"
+    aria-hidden="true"
+    (click)="closeCommentModal()"
+    *ngIf="isRides"
+  >
+    <div class="modal-dialog modal-lg" role="document" (click)="$event.stopPropagation()">
+      <div *ngIf="isProcessing" class="position-absolute top-0 start-0 w-100 h-100 bg-light bg-opacity-75 d-flex justify-content-center align-items-center z-3">
+        <div class="spinner-border text-primary" role="status">
+          <span class="visually-hidden">Processing...</span>
+        </div>
+      </div>
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Reviews</h5>
+          <button type="button" class="btn-close" (click)="closeCommentModal()"></button>
+        </div>
+        <div class="modal-body">
+          <app-view-reviews [ride]="selectedRide"></app-view-reviews>
         </div>
       </div>
     </div>
