--- a/frontend/src/app/components/reservation-history/reservation-history.component.html
+++ b/frontend/src/app/components/reservation-history/reservation-history.component.html
@@ -32,10 +32,10 @@
 				<tr>
 					<td>{{ reservation.reservation.dateReservation | date: 'short' }}</td>
 					<td>
-						{{ reservation.reservation.ride?.dateRide ? (reservation.reservation.ride.dateRide | date: 'short') : 'deleted' }}					</td>
+						{{ reservation.reservation.ride.dateRide ? (reservation.reservation.ride.dateRide | date: 'short') : 'deleted' }}					</td>
 					<td>
-						from {{ reservation.reservation.ride?.depart || 'unknown' }} 
-						to {{ reservation.reservation.ride?.destination || 'unknown' }}
+						from {{ reservation.reservation.ride.depart || 'unknown' }} 
+						to {{ reservation.reservation.ride.destination || 'unknown' }}
 					</td>
 					<td>{{ reservation.reservation.status }}</td>
 						<td>
@@ -69,7 +69,7 @@
 							  <button 
 							  *ngIf="reservation.reservation.status === 'Terminé'" 
 							  class="btn btn-warning btn-sm"
-							  (click)="openReviewModal(reservation.review)"
+							  (click)="openReviewModal(reservation.review,reservation.reservation.ride)"
 							  [disabled]="isProcessing">
 							  <i 
 							  	class="bi bi-star"
@@ -81,8 +81,11 @@
 		</table>
 	</div>
 
+<div [class.modal-open]="isReviewModalOpen" *ngIf="isReviewModalOpen">
 	<!-- model comment-->
+	
 	<div
+	*ngIf="selectedReview"
     class="modal fade"
     tabindex="-1"
     role="dialog"
@@ -91,21 +94,78 @@
     aria-hidden="true"
     (click)="closeReviewModal()"
   >
-    <div class="modal-dialog modal-lg" role="document" (click)="$event.stopPropagation()">
+	<!-- <app-review 
+		*ngIf="!selectedReview"
+		[ride]="selectedRide" 
+		[user]="user"
+		[isModalVisible] = "isReviewModalOpen">
+	</app-review> -->
+    <div class="modal-dialog modal-lg" role="document" (click)="$event.stopPropagation()" >
       <div *ngIf="isProcessing" class="position-absolute top-0 start-0 w-100 h-100 bg-light bg-opacity-75 d-flex justify-content-center align-items-center z-3">
         <div class="spinner-border text-primary" role="status">
           <span class="visually-hidden">Processing...</span>
         </div>
       </div>
       <div class="modal-content">
-        <div class="modal-header">
+        <div class="modal-header" >
           <h5 class="modal-title">Reviews edit</h5>
           <button type="button" class="btn-close" (click)="closeReviewModal()"></button>
         </div>
         <div class="modal-body">
-			<app-review-update [review]="selectedReview"></app-review-update>
+			<app-review-update    [review]="selectedReview"></app-review-update>
         </div>
       </div>
     </div>
   </div>
+  <div *ngIf="!selectedReview" class="modal fade show d-block" tabindex="-1" style="background-color: rgba(0,0,0,0.5);">
+    <div class="modal-dialog" style="max-width: 45%;">  <!-- Réduire la largeur de la modal -->
+      <div 
+        *ngIf="isProcessing" 
+        class="position-absolute top-0 start-0 w-100 h-100 bg-light bg-opacity-75 d-flex justify-content-center align-items-center z-2">
+        <div class="spinner-border text-primary" role="status">
+          <span class="visually-hidden">Processing...</span>
+        </div>
+      </div>
+      <div class="modal-content ">
+        <div class="modal-header" style="height: 40px;">
+          <h5 class="modal-title" style="font-size: 18px;">Review Ride</h5> <!-- Diminuer la taille du titre -->
+          <button type="button" class="btn-close" aria-label="Close" (click)="closeReviewModal()"></button>
+        </div>
+		    <div *ngIf="errorMessage" class="alert alert-danger my-3">{{ errorMessage }}</div>
+        <div class="modal-body" style="padding: 15px;" >
+          <!-- Affichage du message de trajet avec les détails et le nom du conducteur -->
+          <div class="ride-message" style="font-size: 14px;"  >
+            <p><strong>{{ user.firstName }} {{ user.lastName }}:</strong> "I hope you enjoyed your ride from {{ selectedRide?.depart }} to {{ selectedRide?.destination }} on {{ selectedRide.dateRide| date:'short' }} with the driver {{ selectedRide.driver?.firstName }} {{ selectedRide.driver?.lastName }}. Please share your feedback!"</p>
+          </div>
+          
+          <!-- Section de notation en étoiles -->
+          <div style="font-size: 14px;"  >
+            <div class="star-rating d-flex flex-row ">
+              <h6 class="me-1 pt-1">Rate the Driver ({{selectedRide.driver?.firstName }} {{ selectedRide.driver?.lastName }}):</h6>  
+              <!-- <ngb-rating [(rate)]="rating" [max]="5" class="large-rating"></ngb-rating> -->
+                <ngb-rating [(rate)]="rating" [max]="5" >
+                  <ng-template let-fill="fill" let-index="index">
+                    <i class="bi-star{{ fill === 100 ? '-fill' : '' }}" [class.filled]="fill === 100" ></i>
+                  </ng-template>
+                </ngb-rating>
+            </div>
+          </div>
+          
+          <!-- Section pour un commentaire -->
+          <div class="row" >
+            <div class="col-md-10">
+              <!-- <label for="reviewText" style="font-size: 14px;">Leave a Review:</label> -->
+              <input id="reviewText" class="form-control" [(ngModel)]="reviewText" placeholder="Write your review here..." style="font-size: 14px; padding: 5px;" >
+            </div>
+            <button type="button" class="btn btn-primary col-md-2 " (click)="submitReview(selectedRide.driver)" style="font-size: 14px; ">Submit </button>
+          </div>
+        
+        
+        </div>
+        
+    </div>
+  </div>
+  
+  </div>
+</div>
 </ng-template>
