--- a/frontend/src/app/components/review/review.component.html
+++ b/frontend/src/app/components/review/review.component.html
@@ -16,7 +16,7 @@
         <div class="modal-body" style="padding: 15px;" *ngIf="!isDriver">
           <!-- Affichage du message de trajet avec les détails et le nom du conducteur -->
           <div class="ride-message" style="font-size: 14px;"  >
-            <p><strong>{{ user.firstName }} {{ user.lastName }}:</strong> "I hope you enjoyed your ride from {{ ride.depart }} to {{ ride.destination }} on {{ ride.dateRide| date:'short' }} with the driver {{ ride.driver?.firstName }} {{ ride.driver?.lastName }}. Please share your feedback!"</p>
+            <p><strong>{{ user.firstName }} {{ user.lastName }}:</strong> "I hope you enjoyed your ride from {{ ride?.depart }} to {{ ride?.destination }} on {{ ride.dateRide| date:'short' }} with the driver {{ ride.driver?.firstName }} {{ ride.driver?.lastName }}. Please share your feedback!"</p>
           </div>
           
           <!-- Section de notation en étoiles -->
@@ -79,19 +79,7 @@
               </li>
             </ul>
           </div>
-          
-  
-         
-          <!-- <div class="d-flex justify-content-center mt-3">
-            <button 
-              type="button" 
-              class="btn btn-primary col-md-2" 
-              (click)="submitReview()" 
-              style="font-size: 14px;">
-              Submit
-            </button>
-          </div> -->
-          
+      
         </div>
     </div>
   </div>
