--- a/frontend/src/app/components/view-profile/view-profile.component.css
+++ b/frontend/src/app/components/view-profile/view-profile.component.css
@@ -17,3 +17,13 @@ i.bi-star-fill {
 .hover-color-red:hover {
   background-color: #dc3545 !important; /* Red */
 }
+.modal-open {
+  background-color: rgba(0, 0, 0, 0.5); /* Fond sombre semi-transparent */
+  width: 100%;
+  height: 100%;
+  overflow: hidden; /* Désactive le défilement */
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1030; /* Assurez-vous que le z-index est inférieur à celui du modal */
+}
