--- a/frontend/src/app/components/view-profile/view-profile.component.html
+++ b/frontend/src/app/components/view-profile/view-profile.component.html
@@ -143,167 +143,169 @@
 
 
 
-
-<div
-    class="modal fade"
-    tabindex="-1"
-    role="dialog"
-    [class.show]="isDeleteModalOpen"
-    [ngStyle]="{ display: isDeleteModalOpen ? 'block' : 'none' }"
-    aria-hidden="true"
-    (click)="closeDeleteModal()"
->
-    <div class="modal-dialog" role="document" (click)="$event.stopPropagation()">
-      <div *ngIf="isProcessing" class="position-absolute top-0 start-0 w-100 h-100 bg-light bg-opacity-75 d-flex justify-content-center align-items-center z-3">
-        <div class="spinner-border text-primary" role="status">
-            <span class="visually-hidden">Processing...</span>
-        </div>
-      </div>
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Confirm Deletion</h5>
-          <button type="button" class="btn-close" (click)="closeDeleteModal()"></button>
-        </div>
-        <div class="modal-body">
-          <p>Are you sure you want to delete the profil?</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" (click)="closeDeleteModal()">Cancel</button>
-          <button type="button" class="btn btn-danger" (click)="deleteProfile()">Delete</button>
-        </div>
-      </div>
-    </div>
-</div>
-
-
-<div
-    class="modal fade"
-    tabindex="-1"
-    role="dialog"
-    [class.show]="isEditModalOpen"
-    [ngStyle]="{ display: isEditModalOpen ? 'block' : 'none' }"
-    aria-hidden="true"
-    (click)="closeEditModal()"
->
-    <div class="modal-dialog modal-lg" role="document" (click)="$event.stopPropagation()">
+<div [class.modal-open]="isDeleteModalOpen">
+  <div
+      class="modal fade"
+      tabindex="-1"
+      role="dialog"
+      [class.show]="isDeleteModalOpen"
+      [ngStyle]="{ display: isDeleteModalOpen ? 'block' : 'none' }"
+      aria-hidden="true"
+      (click)="closeDeleteModal()"
+  >
+      <div class="modal-dialog" role="document" (click)="$event.stopPropagation()">
         <div *ngIf="isProcessing" class="position-absolute top-0 start-0 w-100 h-100 bg-light bg-opacity-75 d-flex justify-content-center align-items-center z-3">
-            <div class="spinner-border text-primary" role="status">
+          <div class="spinner-border text-primary" role="status">
               <span class="visually-hidden">Processing...</span>
-            </div>
+          </div>
         </div>
         <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Edit Profil</h5>
-          <button type="button" class="btn-close" (click)="closeEditModal()"></button>
-        </div>
-        <div class="modal-body">
-            <form (ngSubmit)="editProfile()" [formGroup]="editUserForm" id="loginForm" class="d-flex flex-column align-items-center justify-content-around height h-100 " >
-                <div *ngIf="formError" class="text-danger text-center ">
-                  Tous les champs sont obligatoires.
-                </div>
-                  <div style="width:600px">   
-                      <div class="form-group mt-2 d-flex align-items-center justify-content-around">
-                          <label for="firstname" class="form-label text-end pe-4 " style="font-size: 17px; width: 150px;font-weight: 500">First Name :</label>
-                          <input
-                            type="text"
-                            id="firstname"
-                            class="form-control"
-                            placeholder="Enter FirstName"
-                            formControlName="firstname"
-                            required
-                            style="border: 1px solid #8a8686; flex-grow: 1; width: 100%;"  
-                          />
-                      </div>
-                      <div class="form-group mt-4 d-flex align-items-center justify-content-between">
-                          <label for="lastname" class="form-label  text-end pe-4  " style="font-size: 17px; width: 150px;font-weight: 500">Last Name :</label>
-                          <input
-                              type="text"
-                              id="lastname"
-                              class="form-control"
-                              placeholder="Enter LastName"
-                              formControlName="lastname"
-                              required
-                              style="border: 1px solid #8a8686; flex-grow: 1; width: 100%;"  
-                          />
-                      </div>
-                      <div class="form-group mt-4 d-flex align-items-center justify-content-between">
-                          <label for="address" class="form-label  text-end pe-4 " style="font-size: 17px; width: 150px;font-weight: 500">Address :</label>
-                          <input
-                              type="text"
-                              id="address"
-                              class="form-control"
-                              placeholder="Enter Address"
-                              formControlName="address"
-                              required
-                              style="border: 1px solid #8a8686; flex-grow: 1; width: 100%;"  
-                          />
-                      </div>
-                      <div class="form-group mt-4 d-flex align-items-center justify-content-between">
-                          <label for="phone" class="form-label  text-end pe-4 " style="font-size: 17px; width: 150px;font-weight: 500">Phone :</label>
-                          <input
-                              type="text"
-                              id="phone"
-                              class="form-control"
-                              placeholder="Enter Phone"
-                              formControlName="phone"
-                              required
-                              style="border: 1px solid #8a8686; flex-grow: 1; width: 100%;"  
-                          />
-                      </div>   
-                      <div *ngIf="editUserForm.get('phone')?.invalid && (editUserForm.get('phone')?.dirty || editUserForm.get('phone')?.touched)" 
-                          class="text-danger" style=" margin-left:123px ">
-                        <div *ngIf="editUserForm.get('phone')?.hasError('pattern')">
-                          Phone number must be 8 numeric characters.
-                        </div>
-                      </div>
-                      <!-- Username Field -->
-                      <div class="form-group mt-4 d-flex align-items-center justify-content-between">
-                          <label for="username" class="form-label  text-end pe-4 " style="font-size: 17px; width: 150px; font-weight:500;">Username :</label>
-                          <input
-                              type="text"
-                              id="email"
-                              class="form-control"
-                              placeholder="Enter username"
-                              formControlName="email"
-                              required
-                              style="border: 1px solid #8a8686; flex-grow: 1; width: 100%;"  
-                          />   
-                      </div>
-                      <div *ngIf="editUserForm.get('email')?.invalid && (editUserForm.get('email')?.dirty || editUserForm.get('email')?.touched)" class="text-danger " style="margin-left:123px " >
-                          <div *ngIf="editUserForm.get('email')?.hasError('email')">
-                              Invalid email address.
-                          </div>
-                      </div>
-                      <!-- Password Field -->
-                      <div class="form-group mt-4 d-flex align-items-center justify-content-between">
-                          <label for="password" class="form-label  text-end pe-4 " style="font-size: 17px; width: 150px;font-weight: 500">Password :</label>
-                          <input
-                              type="password"
-                              id="password"
-                              class="form-control"
-                              placeholder="Enter password"
-                              formControlName="password"
-                              required
-                              style="border: 1px solid #8a8686; flex-grow: 1; width: 100%;"  
-                          />
-                      </div>
-                      <div *ngIf="editUserForm.get('password')?.invalid && (editUserForm.get('password')?.dirty || editUserForm.get('password')?.touched) "
-                      class="text-danger" style="margin-left:123px ">
-                        <div *ngIf="editUserForm.get('password')?.hasError('minlength')">
-                          Password must be at least 8 characters long.
-                        </div>
-                      </div>
-                    </div>
-                  <div class="mt-2">
-                  <button type="submit" class="btn btn-primary" [disabled]="editUserForm.invalid || isProcessing">
-                    Submit
-                  </button>
-                </div>
-              </form>
+          <div class="modal-header">
+            <h5 class="modal-title">Confirm Deletion</h5>
+            <button type="button" class="btn-close" (click)="closeDeleteModal()"></button>
+          </div>
+          <div class="modal-body">
+            <p>Are you sure you want to delete the profil?</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" (click)="closeDeleteModal()">Cancel</button>
+            <button type="button" class="btn btn-danger" (click)="deleteProfile()">Delete</button>
+          </div>
         </div>
       </div>
-    </div>
+  </div>
 </div>
+<div [class.modal-open]="isEditModalOpen">
+  <div
+      class="modal fade"
+      tabindex="-1"
+      role="dialog"
+      [class.show]="isEditModalOpen"
+      [ngStyle]="{ display: isEditModalOpen ? 'block' : 'none' }"
+      aria-hidden="true"
+      (click)="closeEditModal()"
+  >
+      <div class="modal-dialog modal-lg" role="document" (click)="$event.stopPropagation()">
+          <div *ngIf="isProcessing" class="position-absolute top-0 start-0 w-100 h-100 bg-light bg-opacity-75 d-flex justify-content-center align-items-center z-3">
+              <div class="spinner-border text-primary" role="status">
+                <span class="visually-hidden">Processing...</span>
+              </div>
+          </div>
+          <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Edit Profil</h5>
+            <button type="button" class="btn-close" (click)="closeEditModal()"></button>
+          </div>
+          <div class="modal-body">
+              <form (ngSubmit)="editProfile()" [formGroup]="editUserForm" id="loginForm" class="d-flex flex-column align-items-center justify-content-around height h-100 " >
+                  <div *ngIf="formError" class="text-danger text-center ">
+                    Tous les champs sont obligatoires.
+                  </div>
+                    <div style="width:600px">   
+                        <div class="form-group mt-2 d-flex align-items-center justify-content-around">
+                            <label for="firstname" class="form-label text-end pe-4 " style="font-size: 17px; width: 150px;font-weight: 500">First Name :</label>
+                            <input
+                              type="text"
+                              id="firstname"
+                              class="form-control"
+                              placeholder="Enter FirstName"
+                              formControlName="firstname"
+                              required
+                              style="border: 1px solid #8a8686; flex-grow: 1; width: 100%;"  
+                            />
+                        </div>
+                        <div class="form-group mt-4 d-flex align-items-center justify-content-between">
+                            <label for="lastname" class="form-label  text-end pe-4  " style="font-size: 17px; width: 150px;font-weight: 500">Last Name :</label>
+                            <input
+                                type="text"
+                                id="lastname"
+                                class="form-control"
+                                placeholder="Enter LastName"
+                                formControlName="lastname"
+                                required
+                                style="border: 1px solid #8a8686; flex-grow: 1; width: 100%;"  
+                            />
+                        </div>
+                        <div class="form-group mt-4 d-flex align-items-center justify-content-between">
+                            <label for="address" class="form-label  text-end pe-4 " style="font-size: 17px; width: 150px;font-weight: 500">Address :</label>
+                            <input
+                                type="text"
+                                id="address"
+                                class="form-control"
+                                placeholder="Enter Address"
+                                formControlName="address"
+                                required
+                                style="border: 1px solid #8a8686; flex-grow: 1; width: 100%;"  
+                            />
+                        </div>
+                        <div class="form-group mt-4 d-flex align-items-center justify-content-between">
+                            <label for="phone" class="form-label  text-end pe-4 " style="font-size: 17px; width: 150px;font-weight: 500">Phone :</label>
+                            <input
+                                type="text"
+                                id="phone"
+                                class="form-control"
+                                placeholder="Enter Phone"
+                                formControlName="phone"
+                                required
+                                style="border: 1px solid #8a8686; flex-grow: 1; width: 100%;"  
+                            />
+                        </div>   
+                        <div *ngIf="editUserForm.get('phone')?.invalid && (editUserForm.get('phone')?.dirty || editUserForm.get('phone')?.touched)" 
+                            class="text-danger" style=" margin-left:123px ">
+                          <div *ngIf="editUserForm.get('phone')?.hasError('pattern')">
+                            Phone number must be 8 numeric characters.
+                          </div>
+                        </div>
+                        <!-- Username Field -->
+                        <div class="form-group mt-4 d-flex align-items-center justify-content-between">
+                            <label for="username" class="form-label  text-end pe-4 " style="font-size: 17px; width: 150px; font-weight:500;">Username :</label>
+                            <input
+                                type="text"
+                                id="email"
+                                class="form-control"
+                                placeholder="Enter username"
+                                formControlName="email"
+                                required
+                                style="border: 1px solid #8a8686; flex-grow: 1; width: 100%;"  
+                            />   
+                        </div>
+                        <div *ngIf="editUserForm.get('email')?.invalid && (editUserForm.get('email')?.dirty || editUserForm.get('email')?.touched)" class="text-danger " style="margin-left:123px " >
+                            <div *ngIf="editUserForm.get('email')?.hasError('email')">
+                                Invalid email address.
+                            </div>
+                        </div>
+                        <!-- Password Field -->
+                        <div class="form-group mt-4 d-flex align-items-center justify-content-between">
+                            <label for="password" class="form-label  text-end pe-4 " style="font-size: 17px; width: 150px;font-weight: 500">Password :</label>
+                            <input
+                                type="password"
+                                id="password"
+                                class="form-control"
+                                placeholder="Enter password"
+                                formControlName="password"
+                                required
+                                style="border: 1px solid #8a8686; flex-grow: 1; width: 100%;"  
+                            />
+                        </div>
+                        <div *ngIf="editUserForm.get('password')?.invalid && (editUserForm.get('password')?.dirty || editUserForm.get('password')?.touched) "
+                        class="text-danger" style="margin-left:123px ">
+                          <div *ngIf="editUserForm.get('password')?.hasError('minlength')">
+                            Password must be at least 8 characters long.
+                          </div>
+                        </div>
+                      </div>
+                    <div class="mt-2">
+                    <button type="submit" class="btn btn-primary" [disabled]="editUserForm.invalid || isProcessing">
+                      Submit
+                    </button>
+                  </div>
+                </form>
+          </div>
+        </div>
+      </div>
+  </div>
+</div>
+
 </ng-template>
   
 
