--- a/frontend/src/app/components/review-update/review-update.component.html
+++ b/frontend/src/app/components/review-update/review-update.component.html
@@ -37,10 +37,9 @@
               <ul class="list-group mb-3">
                 <li  
                   class="list-group-item d-flex justify-content-between align-items-center">
-                  
+                  <h6 class="me-1 pt-1">Rate the passanger ({{ review.reviewed?.firstName || "unknown" }} {{ review.reviewed?.lastName || "unknown" }}):</h6>
                   <!-- Passenger Name -->
                   <div class="d-flex justify-content-between w-50">
-                    <span>{{ review.reviewer?.firstName  || "unknown" }} {{  review.reviewer?.lastName  || "unknown" }}</span>
                     <ngb-rating  [(rate)]="rating" [max]="5"  class="me-2">
                       <ng-template let-fill="fill" let-index="index">
                         <i class="bi-star{{ fill === 100 ? '-fill' : '' }}" [class.filled]="fill === 100"></i>
